--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <title>Pizza Planet</title>
     </head>
     <body>
-        <div>Hello <%= data%>!</div> 
+        <div>Color Test</div> 
     </body>
     <footer>
 
