--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,26 @@
 <html>
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Exo+2:wght@300&display=swap" rel="stylesheet">
+        <script src="index.js"></script>
         <title>Pizza Planet</title>
     </head>
     <body>
-        <div>Color Test</div> 
+        <div id="primary">Primary</div>
+        <div id="secondary">Secondary</div>
+        <div id="accent">Accent</div>
+        <div id="words">Words</div>
+
+        <div class="button">Submit</div> 
+        <form action="">
+            <label for="js-test" id="js-test">Testing Javascript</label>
+            <input for="js-test" id="js-input" type="text" onkeyup="changeLabel()">
+        </form>
+        
+
+
     </body>
     <footer>
 
