--- a/views/visualtest.ejs
+++ b/views/visualtest.ejs
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com"> 
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Exo+2:wght@300&display=swap" rel="stylesheet">
-        <script src="formfactor.js"></script>
-        <title>Pizza Planet</title>
+        <%- include('./partials/head.ejs'); %>
     </head>
     <body>
         <div id="primary">Primary</div>
