--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,9 +3,9 @@
     <%- include('./partials/head.ejs'); %>
     <body>
         <div id="login-container">
-            <div id="big-logo"><img src="Pizza_Planet.png" alt=""></div>
+            <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
             <h2>Arcade & Cuisine</h2>
-            <form action="/login" method="POST">
+            <form id="login-form" action="/login" method="POST">
                 <div>
                     <input type="text" for="username" name="username" placeholder="username" autocomplete="off">
                 </div>
@@ -17,4 +17,7 @@
         </div> <!--Login container ends-->
 
     </body>
+    <footer>
+        Built by Joshua Peoples for Strongmind
+    </footer>
 </html>
