--- a/public/styles.css
+++ b/public/styles.css
@@ -40,6 +40,7 @@ footer {
     text-align: center;
     width: 50%;
     margin: auto;
+    background-color: rgba(142, 142, 245, 0.4);
 }
 
 div > input {
