--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,17 +3,19 @@
     <%- include('./partials/head.ejs'); %>
     <body>
         <div id="login-container">
-            <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
-            <h2>Arcade & Cuisine</h2>
-            <form id="login-form" action="/login" method="POST">
-                <div>
-                    <input type="text" for="username" name="username" placeholder="username" autocomplete="off">
-                </div>
-                <div>
-                    <input type="password" for="password" placeholder="password">
-                </div>
-                <button class="button">Submit</button>
-            </form>
+            <div id="login-wrapper">
+                <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
+                <h2>Arcade & Cuisine</h2>
+                <form id="login-form" action="/login" method="POST">
+                    <div>
+                        <input type="text" for="username" name="username" placeholder="username" autocomplete="off">
+                    </div>
+                    <div>
+                        <input type="password" for="password" placeholder="password">
+                    </div>
+                    <button class="button">Submit</button>
+                </form>
+            </div>
         </div> <!--Login container ends-->
 
     </body>
