emoji as an added touch

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,9 +3,9 @@
     <%- include('./partials/head.ejs'); %>
     <body>
         <div id="login-container">
-            <div id="login-wrapper">
+            <div id="form-wrapper">
                 <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
-                <h2>Arcade & Cuisine</h2>
+                <h2>&#x1f47d;&#x1f355; Arcade & Cuisine &#x1f355;&#x1f47d;</h2>
                 <form id="login-form" action="/login" method="POST">
                     <div>
                         <input type="text" for="username" name="username" placeholder="username" autocomplete="off">
@@ -20,6 +20,6 @@
 
     </body>
     <footer>
-        Built by Joshua Peoples for Strongmind
+        Built by Joshua Peoples 
     </footer>
 </html>
