--- a/public/styles.css
+++ b/public/styles.css
@@ -39,14 +39,15 @@ footer {
 #login-container{
     text-align: center;
     width: 50%;
-    margin: auto;
+    margin: 100px auto auto auto;
 }
 
-#login-wrapper {
+#form-wrapper {
     background-color: rgba(98, 98, 165, 0.4);
     border-radius: 10px;
     width: 500px;
     margin: auto;
+    padding-bottom: 80px;
 }
 
 div > input {
