--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
         <div id="login-container">
             <div id="form-wrapper">
                 <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
-                <h2>&#x1f47d;&#x1f355; Arcade & Cuisine &#x1f355;&#x1f47d;</h2>
+                <h2>Arcade & Cuisine</h2>
                 <form id="login-form" action="/login" method="POST">
                     <div>
                         <input type="text" for="username" name="username" placeholder="username" autocomplete="off">
