login form posts data

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,12 +8,12 @@
                 <h2>Arcade & Cuisine</h2>
                 <form id="login-form" action="/login" method="POST">
                     <div>
-                        <input type="text" for="username" name="username" placeholder="username" autocomplete="off">
+                        <input type="text" name="username" placeholder="username" autocomplete="off" required>
                     </div>
                     <div>
-                        <input type="password" for="password" placeholder="password">
+                        <input type="password" name="password" placeholder="password" required>
                     </div>
-                    <button class="button">Submit</button>
+                    <button class="button" type="submit">Submit</button>
                 </form>
             </div>
         </div> <!--Login container ends-->
