setup for dashboard route

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
             <div id="form-wrapper">
                 <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
                 <h2>Arcade & Cuisine</h2>
-                <form id="login-form" action="/login" method="POST">
+                <form id="login-form" action="/POSTDATA" method="POST">
                     <div>
                         <input type="text" name="username" placeholder="username" autocomplete="off" required>
                     </div>
