--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,19 +2,6 @@
 <html>
     <%- include('./partials/head.ejs'); %>
     <body>
-        <div class="nav">
-            <img src="/images/Pizza_Planet.png" alt="logo">
-            <div class="nav-data">
-                <h2>Dashboard</h2>
-            </div>
-            <div class="nav-data">
-                <div class="user-photo">
-                    <img src="https://thispersondoesnotexist.com/image" alt="AI generated image of a random human">
-                </div>
-                <div>
-                    Username
-                </div>
-            </div>
-        </div>
+        <%- include('./partials/header-nav.ejs'); %>
     </body>
 </html>
