pass title through partials
The top header will have the title passed down since it is something that is consistent among pages.

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,6 +2,6 @@
 <html>
     <%- include('./partials/head.ejs'); %>
     <body>
-        <%- include('./partials/header-nav.ejs'); %>
+        <%- include('./partials/header-nav.ejs', {nav_title: title}); %>
     </body>
 </html>
