--- a/views/partials/header-nav.ejs
+++ b/views/partials/header-nav.ejs
@@ -1,7 +1,7 @@
 <div class="top-header">
     <img src="/images/Pizza_Planet.png" alt="logo">
     <div id="header-title">
-        <h2>Title</h2>
+        <h2><%= title%></h2>
     </div>
     <div class="user-data">
         <div class="user-photo">
