--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,5 +5,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Exo+2:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script src="formfactor.js"></script>
+    <script src="https://kit.fontawesome.com/7d676e853f.js" crossorigin="anonymous"></script>
     <title>Pizza Planet</title>
 </head>
