--- a/public/styles.css
+++ b/public/styles.css
@@ -64,12 +64,25 @@ footer {
     display: inline;
     margin-top: 10px;
 }
+.new-button {
+    margin-top: 6px;
+    margin-left: 5px;
+    background-color: #bc1a1f; /*#bc1a1f*/ 
+    border: 1px solid #870d51; /* #870d51*/
+    border-radius: 8px;
+    width: 50px;
+    padding: 5px;
+    text-align: center;
+    cursor: pointer;
+    color: #fff;
+    font-family: 'Exo 2', sans-serif;
+}
 .button {
     background-color: #bc1a1f; /*#bc1a1f*/ 
     border: 1px solid #870d51; /* #870d51*/
     border-radius: 8px;
     width: 100px;
-    height: 40px;
+    /* height: 40px; */
     padding: 5px;
     text-align: center;
     margin: 10px;
@@ -77,6 +90,9 @@ footer {
     color: #fff;
     font-family: 'Exo 2', sans-serif;
 }
+
+
+
 #big-logo {
     height: 270px;
     overflow: hidden;
@@ -106,6 +122,64 @@ div > input {
     border-radius: 8px;
     padding-left: 8px;
     margin-top: 10px;
+}
+
+.item-list-container-head {
+    margin: 30px auto;
+    width: 80%;
+    border-radius: 8px;
+    max-height: 600px;
+    background-color: rgba(98, 98, 165, 0.4);
+    text-align: center;
+    
+}
+
+.item-list-container {
+    margin: 30px auto;
+    width: 80%;
+    border-radius: 8px;
+    max-height: 600px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    background-color: rgba(98, 98, 165, 0.4);
+    text-align: center;
+    padding-left: 10px;
+}
+
+
+.item-data {
+    display: grid; 
+    grid-template-columns: .25fr 1fr 1fr 1fr 1fr 1fr;
+    border-radius: 8px; 
+    height: 50px;
+}
+
+.item-data:nth-child(even){
+    background-color: rgba(98, 98, 165, 0.8);
+}
+
+.content-head {
+    text-decoration: underline;
+}
+
+.item-content {
+    display: inline-block;
+    font-family: 'Exo 2', sans-serif;
+    margin: 3px;
+}
+
+
+.item-content > img {
+    max-width: 90%;
+    max-height: 90%;
+    display: inline;
+    border-radius: 4px;
+}
+
+.action-button {
+    display: inline-block;
+    margin: 0 5px;
+    cursor: pointer;
 }
 
 #primary{
