--- a/views/partials/header-nav.ejs
+++ b/views/partials/header-nav.ejs
@@ -8,7 +8,7 @@
             <img src="https://thispersondoesnotexist.com/image" alt="AI generated image of a random human">
         </div>
         <div id="auth-logout">
-            Username
+            <%= username%>
         </div>
     </div>
  </div> <!-- End top header -->
