--- a/public/styles.css
+++ b/public/styles.css
@@ -155,6 +155,7 @@ div > input {
     grid-template-columns: .25fr 1fr 1fr 1fr 1fr 1fr;
     border-radius: 8px; 
     height: 50px;
+    margin: 3px;
 }
 
 .item-data:nth-child(even){
