--- a/public/styles.css
+++ b/public/styles.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
 }
 
-h2 {
+h2, h3 {
     font-family: 'Audiowide', cursive;
     cursor: default;
 }
@@ -65,6 +65,9 @@ footer {
     display: inline;
     margin-top: 10px;
 }
+#create-user-button {
+    margin: auto;
+}
 .new-button {
     margin-top: 6px;
     margin-left: 5px;
@@ -90,6 +93,7 @@ footer {
     cursor: pointer;
     color: #fff;
     font-family: 'Exo 2', sans-serif;
+    font-size: 14px;
 }
 
 
@@ -105,6 +109,7 @@ footer {
     text-align: center;
     width: 50%;
     margin: 100px auto auto auto;
+    font-family: 'Exo 2', sans-serif;
 }
 
 #form-wrapper {
@@ -115,7 +120,7 @@ footer {
     padding-bottom: 80px;
 }
 
-div > input {
+div > input, select {
     margin: 5px;
     height: 2em;
     width: 200px;
