add passport module and successfully create user

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
                     </div>
                     <button class="button" type="submit">Submit</button>
                 </form>
-                <a href="/new" style="text-decoration: none">
+                <a href="/login/new" style="text-decoration: none">
                     <div class="button" id="create-user-button">
                         Create User
                     </div>
