--- a/views/newuser.ejs
+++ b/views/newuser.ejs
@@ -6,7 +6,7 @@
             <div id="form-wrapper">
                 <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
                 <h2>Arcade & Cuisine</h2>
-                <form id="login-form" action="/POSTDATA" method="POST">
+                <form id="login-form" action="/new" method="POST">
                     <div>
                         <input type="text" name="fname" placeholder="First Name" autocomplete="off" required>
                         <input type="text" name="lname" placeholder="Last Name (optional)" autocomplete="off">
@@ -17,7 +17,8 @@
                     </div>
                     <div>
                         <h3>Admin controls</h3>
-                        <select name="select-type" id="select-type" onchange="adminControlKey()">
+                        <span>Set user permissions</span>
+                        <select name="permissions" id="select-type" onchange="adminControlKey()">
                             <option selected>Chef</option>
                             <option>Owner</option>
                         </select>
