remove login.js and replace on server.js
Also adjust routes and form posts

--- a/public/styles.css
+++ b/public/styles.css
@@ -58,6 +58,7 @@ footer {
     font-family: 'Audiowide', cursive;
     font-size: 14px;
     margin-top: 10px;
+    text-decoration: none;
     
 }
 #auth-logout > div {
