--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,16 +6,16 @@
             <div id="form-wrapper">
                 <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
                 <h2>Arcade & Cuisine</h2>
-                <form id="login-form" action="/POSTDATA" method="POST">
+                <form id="login-form" action="/login-user" method="POST">
                     <div>
                         <input type="text" name="username" placeholder="username" autocomplete="off" required>
                     </div>
                     <div>
                         <input type="password" name="password" placeholder="password" required>
                     </div>
-                    <button class="button" type="submit">Submit</button>
+                    <button class="button" type="submit">Login</button>
                 </form>
-                <a href="/login/new" style="text-decoration: none">
+                <a href="/new" style="text-decoration: none">
                     <div class="button" id="create-user-button">
                         Create User
                     </div>
