--- a/views/newuser.ejs
+++ b/views/newuser.ejs
@@ -4,7 +4,9 @@
     <body>
         <div id="login-container">
             <div id="form-wrapper">
-                <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
+                <a href="/">
+                    <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
+                </a>
                 <h2>Arcade & Cuisine</h2>
                 <form id="login-form" action="/new" method="POST">
                     <div>
