--- a/views/partials/header-nav.ejs
+++ b/views/partials/header-nav.ejs
@@ -4,11 +4,12 @@
         <h2><%= title%></h2>
     </div>
     <div class="user-data">
-        <div class="user-photo">
-            <img src="https://thispersondoesnotexist.com/image" alt="AI generated image of a random human">
-        </div>
-        <div id="auth-logout">
-            <%= username%>
-        </div>
+        <a href="/">
+            Logout
+        </a>
+            <div id="auth-logout">
+                <%= username%>
+            </div>
+        
     </div>
  </div> <!-- End top header -->
