error / success message for creating users

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,11 @@
             <div id="form-wrapper">
                 <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
                 <h2>Arcade & Cuisine</h2>
+                <% if (success) { %>
+                    <div class="success-message">
+                        User Successfully Created!
+                    </div>
+                <% } %> 
                 <form id="login-form" action="/login-user" method="POST">
                     <div>
                         <input type="text" name="username" placeholder="username" autocomplete="off" required>
