Revert "npm i express-session, passport, ppl, exp-flash"
This reverts commit fade261f84cacfd370169f002882d363ef70c2b5.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,7 +20,7 @@
                     </div>
                     <button class="button" type="submit">Login</button>
                 </form>
-                <a href="/new-user" style="text-decoration: none">
+                <a href="/new" style="text-decoration: none">
                     <div class="button" id="create-user-button">
                         Create User
                     </div>
