--- a/views/newuser.ejs
+++ b/views/newuser.ejs
@@ -13,7 +13,7 @@
                         User already exists!
                     </div>
                 <% } %> 
-                <form id="login-form" action="/new-user" method="POST">
+                <form id="login-form" action="/new" method="POST">
                     <div>
                         <input type="text" name="fname" placeholder="First Name" autocomplete="off" required>
                         <input type="text" name="lname" placeholder="Last Name (optional)" autocomplete="off">
