--- a/views/newuser.ejs
+++ b/views/newuser.ejs
@@ -10,7 +10,7 @@
                 <h2>Arcade & Cuisine</h2>
                 <% if (!success) { %>
                     <div class="success-message" style="color: red">
-                        User already exists!
+                        Username already exists!
                     </div>
                 <% } %> 
                 <form id="login-form" action="/new" method="POST">
