--- a/views/partials/header-nav.ejs
+++ b/views/partials/header-nav.ejs
@@ -4,12 +4,10 @@
         <h2><%= title%></h2>
     </div>
     <div class="user-data">
-        <a href="/">
-            Logout
-        </a>
-            <div id="auth-logout">
-                <%= username%>
-            </div>
-        
+        <form action="/" method="GET">
+            <button class="button" type="submit" id="auth-logout">
+                Logout
+            </button>
+        </form>
     </div>
  </div> <!-- End top header -->
