--- a/public/styles.css
+++ b/public/styles.css
@@ -113,8 +113,6 @@ footer {
     font-size: 14px;
 }
 
-
-
 #big-logo {
     height: 270px;
     overflow: hidden;
@@ -137,6 +135,13 @@ footer {
     padding-bottom: 80px;
 }
 
+#form-wrapper.create {
+    background-color: rgba(98, 98, 165, 0.4);
+    border-radius: 10px;
+    width: 100%;
+    margin: auto;
+    padding-bottom: 80px;
+}
 div > input, select {
     margin: 5px;
     height: 2em;
