--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -9,7 +9,7 @@
         
         <div class="item-list-container-head">
             <div class="item-data">
-                <div class="item-content"><div class="new-button">New</div></div>
+                <div class="item-content"><a href="/create" style="text-decoration: none"><div class="new-button">New</div></a></div>
                 <div class="item-content content-head">Name</div>
                 <div class="item-content content-head">Type</div>
                 <div class="item-content content-head">Price</div>
