--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,19 @@ body {
     margin: 0;
 }
 
+/* The below two rules are for the arrows inside input when type is number */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 h2, h3 {
     font-family: 'Audiowide', cursive;
     cursor: default;
