--- a/views/partials/header-nav.ejs
+++ b/views/partials/header-nav.ejs
@@ -4,7 +4,7 @@
         <h2><%= title%></h2>
     </div>
     <div class="user-data">
-        <form action="/" method="GET">
+        <form action="/logout" method="GET">
             <button class="button" type="submit" id="auth-logout">
                 Logout
             </button>
