--- a/views/error.ejs
+++ b/views/error.ejs
@@ -10,7 +10,7 @@
                 <div style="padding-top: 10px;">
                     <h2>There was a whoopsie...</h2>
                 </div>
-                Not sure what happened, but we have an error!
+                <%= message %>
             </div>
         </div> <!--Login container ends-->
     </body>
