--- a/views/newuser.ejs
+++ b/views/newuser.ejs
@@ -4,7 +4,7 @@
     <body>
         <div id="login-container">
             <div id="form-wrapper">
-                <form action="/dashboard" method="GET">
+                <form action=".." method="GET">
                     <button class="back-button" type="submit"><i class="fa-solid fa-circle-chevron-left"></i></button>
                 </form>
                 <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
