--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
     <%- include('./partials/head.ejs'); %>
     <body>
         <div id="login-container">
-            <div id="form-wrapper">
+            <div id="form-wrapper" class="create">
                 <div id="big-logo"><img src="/images/Pizza_Planet.png" alt=""></div>
                 <h2>Arcade & Cuisine</h2>
                 <% if (invalid) { %>
