Error handling fix

--- a/views/create.ejs
+++ b/views/create.ejs
@@ -22,7 +22,7 @@
                         </select>
                     </div>
                     <div>
-                        <input type="number" min="0" max="4" step=".01" placeholder="Price" name="price">
+                        <input type="number" min="0" max="4" step=".01" placeholder="Price" name="price" required>
                     </div>
                     <div>
                         Created by: <%= user.username %>
