--- a/views/error.ejs
+++ b/views/error.ejs
@@ -4,7 +4,7 @@
     <body>
         <div id="login-container">
             <div id="form-wrapper" class="create">
-                <a href="/dashboard">
+                <a href="..">
                     <div class="back-button"><i class="fa-solid fa-circle-chevron-left"></i></div>
                 </a>
                 <div style="padding-top: 10px;">
