--- a/public/styles.css
+++ b/public/styles.css
@@ -231,6 +231,33 @@ div > input, select {
     cursor: pointer;
 }
 
+.modal-container {
+     /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+.modal-content {
+    border: 1px solid white;
+    border-radius: 8px;
+    width: 40%;
+    margin: auto;
+    margin-top: 10%;
+    padding-bottom: 15px;
+    text-align: center;
+    background-color: rgba(98, 98, 165, 0.7);
+    font-family: 'Exo 2', sans-serif;
+}
+.modal-content > input {
+    border-radius: 10px;
+}
+
 #primary{
     border: 1px solid white;
     background-color: #1e1f4e;
