--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -49,5 +49,32 @@
                 </div>
             <%}) %>
         </div>
+        <div class="modal-container">
+            <div class="modal-content">
+                <div class="back-button">
+                    <i class="fa-solid fa-circle-xmark"></i>
+                </div>
+                    <h2>Update Topping</h2>
+                    <form action="/create/update" id="update-topping">
+                        <div>
+                            <label for="name">Name</label>
+                            <input name="name" type="text" id="update-topping-name" required>
+                        </div>
+                        <label for="type">Type</label>
+                        <select name="type" id="update-topping-type" required>
+                            <option value="Sauce">Sauce</option>
+                            <option value="Cheese">Cheese</option>
+                            <option value="Veggies">Veggies</option>
+                            <option value="Meat">Meat</option>
+                        </select>
+                        <div>
+                            <label for="price">Price</label>
+                            <input name="price" type="number" min="0" max="4" step=".01" id="update-topping-price" required>
+                        </div>
+                        <input type="hidden" name="createdby" id="update-topping-createdby" placeholder=<%= user.username %>>
+                        <button class="button" type="submit">Submit Changes</button>
+                    </form>
+            </div>
+        </div>
     </body>
 </html>
