--- a/public/styles.css
+++ b/public/styles.css
@@ -184,7 +184,7 @@ div > input, select {
     max-height: 600px;
     background-color: rgba(98, 98, 165, 0.4);
     text-align: center;
-    padding-left: 10px;
+    padding: 10px;
     min-width: 200px;
 }
 .success-message {
